# sbom-risk-analyzer

./: .gitignore  CITATION.cff  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
examples/: offline_fixture.json  sbom.cyclonedx.json
sbomrisk/: __init__.py  cli.py  enrich.py  parse.py  score.py
tests/: test_pipeline.py
