[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "sbom-risk-analyzer"
version = "0.1.0"
description = "Prioritize SBOM components by exploitability using OSV, FIRST EPSS, and CISA KEV."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"

[project.scripts]
sbomrisk = "sbomrisk.cli:main"
